--- a/doc/dokumentace.tex
+++ b/doc/dokumentace.tex
@@ -56,7 +56,7 @@
 		\textbf{Člen}        & \textbf{Login} & \textbf{Rozdelenie bodov} \\
 		Juraj Holub (vedúci) & \texttt{xholub40}       & 33\%                      \\
 		Matej Parobek        & \texttt{xparob00}       & 33\%                      \\
-		Samuel Krempský      & \texttt{xkremp02}      & 33\%                      \\
+		Samuel Krempaský      & \texttt{xkremp02}      & 33\%                      \\
 		Vitalina Koloda      & \texttt{xkolod02}       & 0\%                      
 	\end{tabular}
 \end{table}
@@ -71,7 +71,7 @@
 
 Prácu na projekte sme rozdelili následovne:
 \begin{itemize}
-	\item{\textbf{Lexikálnu analýzu} vytvoril Samuel Krempský (\texttt{xkremp02}).}
+	\item{\textbf{Lexikálnu analýzu} vytvoril Samuel Krempaský (\texttt{xkremp02}).}
 	\item{\textbf{Syntaktickú analýzu zhora nadol} vytvoril Matej Parobek (\texttt{xparob00}).}
 	\item{\textbf{Precedenčnú syntaktickú analýzu} vytvoril Juraj Holub (\texttt{xholub40}).}
 	\item{\textbf{Tabuľku symbolov} vytvoril Juraj Holub (\texttt{xholub40}).}
