--- a/doc/dokumentace.tex
+++ b/doc/dokumentace.tex
@@ -86,7 +86,7 @@ Hlavnými funkciami lexikálnej analýzy sú \texttt{get\_token()} a \texttt{ret
 
 Funkcia \texttt{ret\_token()} vracia token z parseru scanneru. Potom čo je funkcia \texttt{get\_token()} spustená, tak pri ďalšom volaní je vrátený predošlý token. Táto funkcia je volaná parserom a môže požiadať až o dve predošlé tokeny, takže scanner musí mať stále uložené dva predošlé tokeny.
 
-Diagram konečného automatu, který specifikuje lexikální analyzátor \ref{fsm}.
+Diagram konečného automatu, který špecifikuje lexikálny analyzátor \ref{fsm}.
 
 \begin{figure*}[!]
 	\centering
