[MAINTENACE] Update of documentation.

--- a/doc/prezentacia.tex
+++ b/doc/prezentacia.tex
@@ -62,6 +62,21 @@ projekt}
 %	
 \begin{frame}
 	\frametitle{Syntaktická analýza}
+	\begin{itemize}
+		\item{Metoda rekurzívneho zostupu}
+			\begin{itemize}
+				\item definície funkcií
+			 	\item volanie funkcií
+				\item cykly
+				\item podmienky
+				\item priradenia
+			\end{itemize}
+		\item{Precedenčná syntaktická analýza}
+		\begin{itemize}
+			\item logické výrazy
+			\item aritmetické výrazy
+		\end{itemize}
+	\end{itemize}
 
 \end{frame}
 %
