--- a/doc/prezentacia.tex
+++ b/doc/prezentacia.tex
@@ -92,9 +92,15 @@ projekt}
 	
 	\begin{itemize}
 	    
-		\item{Implementované podľa konečného automatu}
-		\item{Implementáciu zaisťujú dve hlavné funkcie \texttt{get\_token()}, \texttt{ret\_token()}}
-		\item{Načíta vstup a podľa konečného automatu vracia token syntaktickej analýze}
+		\item{implementácia konečným  automatom}
+		\item \texttt{get\_token()}
+		\item \texttt{ret\_token()}
+		\item konverzia IFJ18 reťazcov na IFJcode18 reťazce
+	\end{itemize}
+	Token
+	\begin{itemize}
+		\item typ lexémy (kľúčové slová, konštanty, premenné...)
+		\item atribút lexémy (hodnota konštanty, )
 	\end{itemize}
 
 \end{frame}
